crates/php-parser/tests/snapshots/nikic_error_tests__nikic_errorhandling_recovery_25.snap
---
source: crates/php-parser/tests/nikic_error_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Array": [
                    {
                      "key": null,
                      "value": {
                        "kind": {
                          "String": "a "
                        },
                        "span": {
                          "start": 12,
                          "end": 16
                        }
                      },
                      "unpack": false,
                      "span": {
                        "start": 12,
                        "end": 16
                      }
                    }
                  ]
                },
                "span": {
                  "start": 11,
                  "end": 16
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 16
          }
        }
      },
      "span": {
        "start": 6,
        "end": 16
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "thing"
          },
          "span": {
            "start": 16,
            "end": 21
          }
        }
      },
      "span": {
        "start": 16,
        "end": 22
      }
    },
    {
      "kind": "Error",
      "span": {
        "start": 22,
        "end": 24
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 24
  }
}
