crates/php-parser/tests/snapshots/nikic_error_tests__nikic_errorhandling_recovery_8.snap
---
source: crates/php-parser/tests/nikic_error_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "i"
                },
                "span": {
                  "start": 97,
                  "end": 99
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Int": 0
                },
                "span": {
                  "start": 102,
                  "end": 103
                }
              }
            }
          },
          "span": {
            "start": 97,
            "end": 103
          }
        }
      },
      "span": {
        "start": 97,
        "end": 105
      }
    },
    {
      "kind": {
        "While": {
          "condition": {
            "kind": {
              "Bool": true
            },
            "span": {
              "start": 112,
              "end": 116
            }
          },
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Assign": {
                          "target": {
                            "kind": {
                              "Variable": "i"
                            },
                            "span": {
                              "start": 124,
                              "end": 126
                            }
                          },
                          "op": "Assign",
                          "value": {
                            "kind": {
                              "Int": 1
                            },
                            "span": {
                              "start": 129,
                              "end": 130
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 124,
                        "end": 130
                      }
                    }
                  },
                  "span": {
                    "start": 124,
                    "end": 136
                  }
                },
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Assign": {
                          "target": {
                            "kind": {
                              "Variable": "i"
                            },
                            "span": {
                              "start": 136,
                              "end": 138
                            }
                          },
                          "op": "Assign",
                          "value": {
                            "kind": {
                              "Int": 2
                            },
                            "span": {
                              "start": 141,
                              "end": 142
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 136,
                        "end": 142
                      }
                    }
                  },
                  "span": {
                    "start": 136,
                    "end": 143
                  }
                }
              ]
            },
            "span": {
              "start": 118,
              "end": 143
            }
          }
        }
      },
      "span": {
        "start": 105,
        "end": 143
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 143
  }
}
